# gstbk

./: Cargo.toml  README.md
class_group/: Cargo.toml  build.rs
class_group/src/: lib.rs
class_group/src/primitives/: cl_dl_lcm.rs  cl_dl_public_setup.rs  polynomial_comm.rs
communication_bash/: node1.sh  node2.sh  node3.sh  node4.sh  proxy.sh  start_communication.sh
gs_tbk_scheme/: Cargo.toml  group.json
gs_tbk_scheme/src/: clgroup_gen.rs  group.txt  lib.rs  params.rs  tree.rs
gs_tbk_scheme/src/messages/: common_msg.rs  mod.rs
gs_tbk_scheme/src/messages/node/: common_msg.rs  join_issue_msg.rs  key_manage_msg.rs  keygen_msg.rs  mod.rs  open_msg.rs  revoke_msg.rs  setup_msg.rs
gs_tbk_scheme/src/messages/proxy/: common_msg.rs  join_issue_msg.rs  key_manage_msg.rs  keygen_msg.rs  mod.rs  open_msg.rs  revoke_msg.rs  setup_msg.rs  verify_msg.rs
gs_tbk_scheme/src/messages/user/: common_msg.rs  join_issue_msg.rs  mod.rs  revoke_msg.rs  sign_msg.rs
intergration_test/: Cargo.toml
intergration_test/src/: lib.rs
intergration_test/src/node/: mod.rs
intergration_test/src/node/node1/: mod.rs  node1.rs
intergration_test/src/node/node2/: mod.rs  node2.rs
intergration_test/src/node/node3/: mod.rs  node3.rs
intergration_test/src/node/node4/: mod.rs  node4.rs
intergration_test/src/proxy/: mod.rs  proxy_node.rs
intergration_test/src/user/: mod.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs  node.rs
node/src/communication/: communication.rs
node/src/config/: config.rs
node/src/config/config_files/: gs_tbk_config.json  log4rs.yaml
node/src/contents/: tree.json
node/src/gs_tbk_scheme/: join_issue_phase.rs  key_manage.rs  keygen_phase.rs  mod.rs  open_phase.rs  revoke_phase.rs  setup_phase.rs  verify_phase.rs
proxy/: Cargo.toml
proxy/src/: lib.rs  main.rs  proxy.rs
proxy/src/communication/: communication.rs
proxy/src/config/: config.rs
proxy/src/gs_tbk_scheme/: join_issue_phase.rs  key_manage.rs  keygen_phase.rs  mod.rs  open_phase.rs  revoke_phase.rs  setup_phase.rs  verify_phase.rs
user/: Cargo.toml
user/src/: lib.rs  main.rs  user.rs
user/src/communication/: communication.rs
user/src/config/: config.rs
user/src/gs_tbk_scheme/: join_issue_phase.rs  mod.rs  revoke_phase.rs  sign_phase.rs
(+36 files in other folders)
