[workspace]
members = [
    "class_group",
    "user",
    "gs_tbk_scheme",
    "node",
    "proxy",
    "intergration_test",
]
resolver = "2"

[workspace.dependencies]
class_group ={ path ="./class_group" }
user = { path = "./user" }
gs_tbk_scheme = { path = "./gs_tbk_scheme" }
node = { path = "./node" }
proxy = { path = "./proxy" }
intergration_test = { path = "./intergration_test" }
test ={ path = "./test" }

curv-kzen = { version = "0.9", default-features = false }
sha2 = "0.9"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "0.8"
time = "0.1"
serde_json = "1.0"
num = "0.2"
chrono = "0.4"
crossbeam-channel = "0.5.1"
bincode = "1.3.1"
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }